--- a/client/index.html
+++ b/client/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CapitolTrades | Politician Trading Tracker</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <title>GovMarket | Politician Trading Tracker</title>
     <meta name="description" content="Track financial disclosures and trading activities of politicians from US Congress, EU Parliament, UK Parliament, and more. Comprehensive politician trading tracker with real-time data." />
     <meta name="keywords" content="politician trading, stock trading, congress trading, financial disclosure, STOCK Act, political finance" />
-    <meta property="og:title" content="CapitolTrades | Politician Trading Tracker" />
+    <meta property="og:title" content="GovMarket | Politician Trading Tracker" />
     <meta property="og:description" content="Track financial disclosures and trading activities of politicians worldwide." />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
